trying to fix contrast by changing color font

--- a/styles/home_page.css
+++ b/styles/home_page.css
@@ -33,7 +33,7 @@ h2 {
     padding-left: 150px;
     font-size: 40px;
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    color:aliceblue;
+    color:white;
     text-shadow: 2px 2px 4px #000000;
 }
 
